--- a/style/index.css
+++ b/style/index.css
@@ -31,7 +31,7 @@ body {
         linear-gradient(
             rgba(6, 250, 133, 0.25),
             rgba(172, 250, 6, 0.25)),
-        url('img/beach.jpg')
+        url('../img/beach.jpg')
         center center no-repeat;
     background-size:cover;
     -moz-background-size:cover;
@@ -41,6 +41,7 @@ body {
     display:flex;
     justify-content:center;
     align-items:center;
+    flex-wrap:wrap;
 
     color:#ffffff;
     text-align:center;
@@ -55,6 +56,7 @@ body {
     position:fixed;
     top:0;
     left:0;
+    max-width:100%;
 
     display:flex;
     justify-content:center;
@@ -62,6 +64,7 @@ body {
 }
 
 #sidebar-content {
+    max-width:100%;
     text-align:center;
 }
 
@@ -69,9 +72,13 @@ body {
     border-radius: 50%;
     width:15em;
     max-width:100%;
-    height:15em;
-    max-height:100%;
-    background-color:black;
+    padding-top:100%;
+
+    background:url("../img/me.jpg") center center no-repeat;;
+    background-size:cover;
+    -moz-background-size:cover;
+    -o-background-size:cover;
+    -webkit-background-size:cover;
 }
 
 #all-content {
@@ -119,9 +126,12 @@ img.graphic.vertical {
     display:flex;
     justify-content:center;
     align-items:center;
+    flex-wrap: wrap;
+    text-align:center;
 }
 
 .button {
+    margin:0;
     padding:0.2em;
     width:7em;
     font-family:'Squada One';
@@ -142,7 +152,7 @@ img.graphic.vertical {
 .divider {
     width:2em;
     height:auto;
-    display:inline-block;
+    //display:inline-block;
 }
 
 ::selection {
@@ -152,7 +162,7 @@ img.graphic.vertical {
     background: #5b5b5b;
 }
 
-@media (max-width:800px) {
+/* @media (max-width:800px) {
     html {
         font-size:0.75em;
     }
@@ -161,5 +171,14 @@ img.graphic.vertical {
 @media (max-width:550px) {
     html {
         font-size:0.4em;
+    }
+} */
+
+@media only screen and (max-width : 768px) {
+    #sidebar {
+        height:100vh;
+        position:relative;
+        top:0;
+        left:0;
     }
 }
