--- a/style/index.css
+++ b/style/index.css
@@ -1,21 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Squada+One);
 @import url(https://fonts.googleapis.com/css?family=Roboto);
 
-
-.skrollable {
-	position:fixed;
-	z-index:100;
-}
-.skrollr-mobile .skrollable {
-	position:absolute;
-}
-.skrollable .skrollable {
-	position:absolute;
-}
-.skrollable .skrollable .skrollable {
-	position:static;
-}
-
 html, body {
     margin:0;
     width:100%;
@@ -57,12 +42,12 @@ body {
     text-align:center;
 }
 
-#graphics {
-    position:relative;
-}
-
+#graphics,
 #web {
     position:relative;
+	width:75%;
+	margin:auto;
+	margin-bottom:5em;
 }
 
 #sidebar {
@@ -90,9 +75,7 @@ body {
 #circle {
     border-radius: 50%;
     width:15em;
-	height:15em; /*
-    max-width:100%;
-    padding-top:100%; */
+	height:15em;
 
     background:url("../img/me.jpg") center center no-repeat;;
     background-size:cover;
@@ -138,57 +121,20 @@ a {
 
 img.graphic {
     position:relative;
-    width:75%;
+	width:100%;
     height:auto;
-    margin-top:5em;
-    margin-bottom:5em;
+    margin-top:4em;
+    margin-bottom:2em;
 }
 
 img.graphic.vertical {
     max-height:95vh;
     width:auto;
-    max-width:75%;
 }
 
-.buttonList {
-    height:10em;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    flex-wrap: wrap;
-    text-align:center;
-}
-
-.button {
-    margin:0;
-    padding:0.2em;
-    width:7em;
-    font-family:'Squada One';
-    font-weight:400;
-    text-transform:uppercase;
-    font-size:2em;
-    color:#ffffff;
-    background:rgba(0,0,0,0);
-    border: solid 0.1em #ffffff;
-}
-
-.buttonDark {
-    margin:0;
-    padding:0.2em;
-    width:7em;
-    font-family:'Squada One';
-    font-weight:400;
-    text-transform:uppercase;
-    font-size:2em;
-    color:#000000;
-    background:rgba(0,0,0,0);
-    border: solid 0.1em #000000;
-}
-
-.button:hover {
-    cursor:pointer;
-    transition:0.3s;
-    box-shadow: 0 0 0 0.1em #ffffff;
+.description {
+	width:100%;
+	margin:auto;
 }
 
 .sideBttn {
@@ -217,18 +163,6 @@ img.graphic.vertical {
     background: #5b5b5b;
 	color:white;
 }
-
-/* @media (max-width:800px) {
-    html {
-        font-size:0.75em;
-    }
-}
-
-@media (max-width:550px) {
-    html {
-        font-size:0.4em;
-    }
-} */
 
 @media only screen and (max-width : 768px) {
     #sidebar {
