--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ hr {
   margin-bottom: 2rem;
   padding: 5rem;
   width: calc(100% - 10rem);
-  background-color: #eeeeee;
+  background-color: #f9f9f9;
 }
 
 .art-img {
