--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,14 @@ h2 {
   margin-top: 4rem;
 }
 
+h3 {
+  margin-bottom: 0;
+}
+
+.other p {
+  margin-top: 0;
+}
+
 a {
   text-decoration: none;
   color: #00a993;
