--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,18 @@ hr {
   background-color: #f9f9f9;
 }
 
+.web-img-special {
+  margin-top: 2rem;
+  width: 100%;
+}
+.web-img-special2 {
+  margin-bottom: 2rem;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 60%;
+}
+
 .art-img {
   margin: 4rem 0;
   width: 100%;
